software/gitea/resources/gitea.ingress.values.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: nebula-ce-frontend
    meta.helm.sh/release-namespace: nebula
  labels:
    app.kubernetes.io/instance: nebula-ce-frontend
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nebula-ce-frontend
    app.kubernetes.io/version: 1.0.0-Cfc2ec558.dirty
    helm.sh/chart: nebula-ce-frontend-1.0.0-Cfc2ec558.dirty
  name: gitea-ingress
  namespace: gitea
spec:
  rules:
  - host: gitea.conti.net
    http:
      paths:
      - backend:
          service:
            name: gitea-http
            port:
              number: 3000
        path: /
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - ip: 10.96.137.8
